flux/apps/yarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yarr
spec:
  selector:
    matchLabels:
      app: yarr
  template:
    metadata:
      labels:
        app: yarr
    spec:
      containers:
        - name: yarr
          image: arsfeld/yarr:latest
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 7070
