flux/apps/yarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yarr
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - yarr.bit.vet
      secretName: yarr-tls
  rules:
    - host: yarr.bit.vet
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yarr
                port:
                  name: http
